Try fix JFXProcessBar