@@ -12,7 +12,7 @@ plugins {
 }
 
 javafx {
-    version = "17.0.1"
+    version = "11"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -34,6 +34,30 @@ dependencies {
     implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
+
+run {
+    applicationDefaultJvmArgs += [
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+            "--add-exports", "javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+            "--add-exports", "javafx.base/com.sun.javafx.binding=com.jfoenix",
+            "--add-exports", "javafx.base/com.sun.javafx.event=com.jfoenix",
+            "--add-exports", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+            "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
+            "--add-exports", "javafx.graphics/com.sun.javafx.scene.text=com.jfoenix",
+            "--add-exports", "javafx.graphics/com.sun.javafx.geom=com.jfoenix",
+            "--add-exports", "javafx.graphics/com.sun.javafx.util=com.jfoenix",
+            "--add-exports", "javafx.graphics/com.sun.javafx.scene.traversal=com.jfoenix"
+    ]
 }
 
 group = 'cn.gaein.video'
